// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FlexTable / With different table props Default 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c19 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c16 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c16,
.c16[type='button'],
.c16[type='reset'],
.c16[type='submit'] {
  -webkit-appearance: button;
}

.c16::-moz-focus-inner,
.c16[type='button']::-moz-focus-inner,
.c16[type='reset']::-moz-focus-inner,
.c16[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c16:-moz-focusring,
.c16[type='button']:-moz-focusring,
.c16[type='reset']:-moz-focusring,
.c16[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E6E;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c6 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c7 {
  width: inherit;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
}

.c13 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c15 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c11 {
  display: none;
  margin-left: -4px;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c2 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:nth-last-child(2) {
  padding-right: 0;
}

.c12 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c12:hover {
  background: #F5F5F5;
}

.c12 > *:first-child {
  padding-left: 0;
}

.c12 > *:nth-last-child(2) {
  padding-right: 0;
}

.c3 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c5 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c0 {
  position: relative;
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1600px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c10 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:976px) {
  .c11 {
    -webkit-flex: 0 40px;
    -ms-flex: 0 40px;
    flex: 0 40px;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1 c2 c3"
    role="row"
  >
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Header 1
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Header 2
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Header 3
        </span>
      </div>
    </div>
    <div
      className="c10 c5 c11"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        />
      </div>
    </div>
  </div>
  <div
    className="c1 c12"
    role="row"
  >
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 1-1
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 1-2
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 1-3
        </span>
      </div>
    </div>
    <div
      className="c10 c13 c15 c11"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c16 c17"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c18"
        >
          <svg
            aria-hidden="true"
            className="c19"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1 c12"
    role="row"
  >
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 2-1
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 2-2
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 2-3
        </span>
      </div>
    </div>
    <div
      className="c10 c13 c15 c11"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c16 c17"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c18"
        >
          <svg
            aria-hidden="true"
            className="c19"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1 c12"
    role="row"
  >
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 3-1
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 3-2
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 3-3
        </span>
      </div>
    </div>
    <div
      className="c10 c13 c15 c11"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c16 c17"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c18"
        >
          <svg
            aria-hidden="true"
            className="c19"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With different table props With Actions Column 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c21 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c15 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c15,
.c15[type='button'],
.c15[type='reset'],
.c15[type='submit'] {
  -webkit-appearance: button;
}

.c15::-moz-focus-inner,
.c15[type='button']::-moz-focus-inner,
.c15[type='reset']::-moz-focus-inner,
.c15[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c15:-moz-focusring,
.c15[type='button']:-moz-focusring,
.c15[type='reset']:-moz-focusring,
.c15[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c18 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E6E;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c20 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c6 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c7 {
  width: inherit;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
}

.c13 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c19 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c11 {
  display: none;
  margin-left: -4px;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c2 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:nth-last-child(2) {
  padding-right: 0;
}

.c12 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c12:hover {
  background: #F5F5F5;
}

.c12 > *:first-child {
  padding-left: 0;
}

.c12 > *:nth-last-child(2) {
  padding-right: 0;
}

.c3 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c5 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c0 {
  position: relative;
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1600px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c10 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:976px) {
  .c11 {
    -webkit-flex: 0 40px;
    -ms-flex: 0 40px;
    flex: 0 40px;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1 c2 c3"
    role="row"
  >
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Header 1
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Header 2
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Header 3
        </span>
      </div>
    </div>
    <div
      className="c10 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        />
      </div>
    </div>
    <div
      className="c10 c5 c11"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        />
      </div>
    </div>
  </div>
  <div
    className="c1 c12"
    role="row"
  >
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 1-1
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 1-2
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 1-3
        </span>
      </div>
    </div>
    <div
      className="c10 c13"
      role="cell"
    >
      <button
        className="c15 c16"
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c17"
        >
          <svg
            aria-hidden="true"
            className="c18"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      className="c10 c13 c19 c11"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c15 c20"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c17"
        >
          <svg
            aria-hidden="true"
            className="c21"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1 c12"
    role="row"
  >
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 2-1
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 2-2
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 2-3
        </span>
      </div>
    </div>
    <div
      className="c10 c13"
      role="cell"
    >
      <button
        className="c15 c16"
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c17"
        >
          <svg
            aria-hidden="true"
            className="c18"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      className="c10 c13 c19 c11"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c15 c20"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c17"
        >
          <svg
            aria-hidden="true"
            className="c21"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1 c12"
    role="row"
  >
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 3-1
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 3-2
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 3-3
        </span>
      </div>
    </div>
    <div
      className="c10 c13"
      role="cell"
    >
      <button
        className="c15 c16"
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c17"
        >
          <svg
            aria-hidden="true"
            className="c18"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      className="c10 c13 c19 c11"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c15 c20"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c17"
        >
          <svg
            aria-hidden="true"
            className="c21"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With different table props With Custom Title 1`] = `
.c4 {
  height: 16px;
  width: 16px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  margin-left: -2px;
  margin-right: -2px;
}

.c2 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c7 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c7 > *:not(:first-child) {
  padding-top: 0;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c16 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c25 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c22,
.c22[type='button'],
.c22[type='reset'],
.c22[type='submit'] {
  -webkit-appearance: button;
}

.c22::-moz-focus-inner,
.c22[type='button']::-moz-focus-inner,
.c22[type='reset']::-moz-focus-inner,
.c22[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c22:-moz-focusring,
.c22[type='button']:-moz-focusring,
.c22[type='reset']:-moz-focusring,
.c22[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E6E;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E6E;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c20 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c24 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c23 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c12 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c13 {
  width: inherit;
}

.c15 {
  font-size: 14px;
  line-height: 20px;
}

.c19 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c21 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c17 {
  display: none;
  margin-left: -4px;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c8 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c8 > *:first-child {
  padding-left: 0;
}

.c8 > *:nth-last-child(2) {
  padding-right: 0;
}

.c18 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c18:hover {
  background: #F5F5F5;
}

.c18 > *:first-child {
  padding-left: 0;
}

.c18 > *:nth-last-child(2) {
  padding-right: 0;
}

.c9 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c11 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width:760px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1600px) {
  .c7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:976px) {
  .c17 {
    -webkit-flex: 0 40px;
    -ms-flex: 0 40px;
    flex: 0 40px;
  }
}

<div
  aria-labelledby="custom-title-title"
  className="c0"
  id="custom-title"
  role="table"
>
  <div
    className="c1"
    id="custom-title-title"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_410)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#FFCF00"
            />
            <path
              d="M5.4783 6.087h8.4624C13.4933 2.6524 10.5565 0 7 0a7.0246 7.0246 0 0 0-1.5217.1664V6.087ZM3.6522 6.087V.851C1.73 1.9.354 3.8235.0592 6.087h3.593ZM3.6521 7.913H.0592c.2949 2.2635 1.6709 4.1871 3.593 5.2358V7.913ZM5.4783 7.913v5.9206c.49.1086.999.1664 1.5217.1664 3.5565 0 6.4933-2.6524 6.9407-6.087H5.4783Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_410"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Sweden
          </title>
        </svg>
      </div>
      <div
        className="c3"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c5"
        >
          Ericsson Corporation
        </span>
      </div>
      <div
        className="c3"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c6"
        >
          (
          ERICSSON
          )
        </span>
      </div>
    </div>
  </div>
  <div
    className="c7 c8 c9"
    role="row"
  >
    <div
      className="c10 c11"
      role="columnheader"
    >
      <div
        className="c12 c13"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c15"
        >
          Header 1
        </span>
      </div>
    </div>
    <div
      className="c10 c11"
      role="columnheader"
    >
      <div
        className="c12 c13"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c15"
        >
          Header 2
        </span>
      </div>
    </div>
    <div
      className="c10 c11"
      role="columnheader"
    >
      <div
        className="c12 c13"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c15"
        >
          Header 3
        </span>
      </div>
    </div>
    <div
      className="c16 c11 c17"
      role="columnheader"
    >
      <div
        className="c12 c13"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c15"
        />
      </div>
    </div>
  </div>
  <div
    className="c7 c18"
    role="row"
  >
    <div
      className="c10 c19"
      role="cell"
    >
      <div
        className="c12 c13"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c20 c15"
        >
          Cell 1-1
        </span>
      </div>
    </div>
    <div
      className="c10 c19"
      role="cell"
    >
      <div
        className="c12 c13"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c20 c15"
        >
          Cell 1-2
        </span>
      </div>
    </div>
    <div
      className="c10 c19"
      role="cell"
    >
      <div
        className="c12 c13"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c20 c15"
        >
          Cell 1-3
        </span>
      </div>
    </div>
    <div
      className="c16 c19 c21 c17"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c22 c23"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c24"
        >
          <svg
            aria-hidden="true"
            className="c25"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With different table props With Footer 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c19 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c16 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c16,
.c16[type='button'],
.c16[type='reset'],
.c16[type='submit'] {
  -webkit-appearance: button;
}

.c16::-moz-focus-inner,
.c16[type='button']::-moz-focus-inner,
.c16[type='reset']::-moz-focus-inner,
.c16[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c16:-moz-focusring,
.c16[type='button']:-moz-focusring,
.c16[type='reset']:-moz-focusring,
.c16[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E6E;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c22 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c17 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c6 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c7 {
  width: inherit;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
}

.c13 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c15 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c11 {
  display: none;
  margin-left: -4px;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c2 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:nth-last-child(2) {
  padding-right: 0;
}

.c12 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c12:hover {
  background: #F5F5F5;
}

.c12 > *:first-child {
  padding-left: 0;
}

.c12 > *:nth-last-child(2) {
  padding-right: 0;
}

.c3 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c20 {
  border-top: 1px solid #282823;
  border-bottom: 0;
}

.c5 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c21 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c0 {
  position: relative;
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1600px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c10 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:976px) {
  .c11 {
    -webkit-flex: 0 40px;
    -ms-flex: 0 40px;
    flex: 0 40px;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1 c2 c3"
    role="row"
  >
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Header 1
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Header 2
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Header 3
        </span>
      </div>
    </div>
    <div
      className="c10 c5 c11"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        />
      </div>
    </div>
  </div>
  <div
    className="c1 c12"
    role="row"
  >
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 1-1
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 1-2
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 1-3
        </span>
      </div>
    </div>
    <div
      className="c10 c13 c15 c11"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c16 c17"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c18"
        >
          <svg
            aria-hidden="true"
            className="c19"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1 c12"
    role="row"
  >
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 2-1
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 2-2
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 2-3
        </span>
      </div>
    </div>
    <div
      className="c10 c13 c15 c11"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c16 c17"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c18"
        >
          <svg
            aria-hidden="true"
            className="c19"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1 c12"
    role="row"
  >
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 3-1
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 3-2
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          Cell 3-3
        </span>
      </div>
    </div>
    <div
      className="c10 c13 c15 c11"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c16 c17"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c18"
        >
          <svg
            aria-hidden="true"
            className="c19"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1 c2 c20"
    role="row"
  >
    <div
      className="c4 c21"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c22 c9"
        >
          Footer 1
        </span>
      </div>
    </div>
    <div
      className="c4 c21"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c22 c9"
        >
          Footer 2
        </span>
      </div>
    </div>
    <div
      className="c4 c21"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c22 c9"
        >
          Footer 3
        </span>
      </div>
    </div>
    <div
      className="c10 c21 c11"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c22 c9"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With different table props With Title 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c22 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c19 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c19,
.c19[type='button'],
.c19[type='reset'],
.c19[type='submit'] {
  -webkit-appearance: button;
}

.c19::-moz-focus-inner,
.c19[type='button']::-moz-focus-inner,
.c19[type='reset']::-moz-focus-inner,
.c19[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c19:-moz-focusring,
.c19[type='button']:-moz-focusring,
.c19[type='reset']:-moz-focusring,
.c19[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E6E;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c21 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c20 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c10 {
  width: inherit;
}

.c12 {
  font-size: 14px;
  line-height: 20px;
}

.c16 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c18 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c14 {
  display: none;
  margin-left: -4px;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c5 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:nth-last-child(2) {
  padding-right: 0;
}

.c15 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c15:hover {
  background: #F5F5F5;
}

.c15 > *:first-child {
  padding-left: 0;
}

.c15 > *:nth-last-child(2) {
  padding-right: 0;
}

.c6 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c8 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  padding-left: 4px;
}

@media (min-width:760px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1600px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c13 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:760px) {
  .c2 {
    font-size: 20px;
    line-height: 1.2;
  }
}

@media (min-width:976px) {
  .c14 {
    -webkit-flex: 0 40px;
    -ms-flex: 0 40px;
    flex: 0 40px;
  }
}

<div
  aria-labelledby="table-with-title-title"
  className="c0"
  id="table-with-title"
  role="table"
>
  <div
    className="c1"
    id="table-with-title-title"
  >
    <span
      className="Typography__Span-sc-10mju41-0 c2 c3"
    >
      A Title
    </span>
  </div>
  <div
    className="c4 c5 c6"
    role="row"
  >
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c11 c12"
        >
          Header 1
        </span>
      </div>
    </div>
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c11 c12"
        >
          Header 2
        </span>
      </div>
    </div>
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c11 c12"
        >
          Header 3
        </span>
      </div>
    </div>
    <div
      className="c13 c8 c14"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c11 c12"
        />
      </div>
    </div>
  </div>
  <div
    className="c4 c15"
    role="row"
  >
    <div
      className="c7 c16"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c17 c12"
        >
          Cell 1-1
        </span>
      </div>
    </div>
    <div
      className="c7 c16"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c17 c12"
        >
          Cell 1-2
        </span>
      </div>
    </div>
    <div
      className="c7 c16"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c17 c12"
        >
          Cell 1-3
        </span>
      </div>
    </div>
    <div
      className="c13 c16 c18 c14"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c19 c20"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c21"
        >
          <svg
            aria-hidden="true"
            className="c22"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;
